# awesome-agent-servers

competitor-analysis-agent/: CONTRIBUTING.md  Dockerfile.agent  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
competitor-analysis-agent/.devcontainer/: devcontainer.json
competitor-analysis-agent/.github/workflows/: build-and-push.yml
competitor-analysis-agent/competitor_analysis_agent/: __init__.py  __main__.py  __version__.py  agent_config.json  main.py
competitor-analysis-agent/docs/: index.md  modules.md
competitor-analysis-agent/tests/: test_main.py
documentation-generator/: .env.example  README.md
documentation-generator/documentation_generator/: agent_config.json  main.py
web-extraction-agent/: .env.example  Dockerfile.agent  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
web-extraction-agent/docs/: index.md
web-extraction-agent/tests/: test_main.py
web-extraction-agent/web_extraction_agent/: __init__.py  agent_config.json  main.py
youtube-agent/: .env.example  CONTRIBUTING.md  Dockerfile.agent  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
youtube-agent/.devcontainer/: devcontainer.json
youtube-agent/.github/workflows/: build-and-push.yml
youtube-agent/docs/: index.md  modules.md
youtube-agent/tests/: test_main.py
youtube-agent/youtube_agent/: __init__.py  __main__.py  __version__.py  agent_config.json  main.py
